@@ -3,6 +3,7 @@ Before 0.97a
 FIXED BUG - Editor clone doesn't work
 FIXED BUG - Show Only First Doesn't Work
 FIXED BUG - Editor imagemap has wrong sort order (lower things have priority)
+Quote escaping bug for NOTES? http://forums.cacti.net/viewtopic.php?p=181452#181452
 
 
 
